fix: revert to font-size: 80% to avoid zoom gap

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 html {
-  zoom: 0.8;
+  font-size: 80%;
 }
 
 :root {
